--- a/mastercalendar.html
+++ b/mastercalendar.html
@@ -129,6 +129,9 @@
       <button class="header-btn" onclick="location.href='availability.html'">
         Availability Calendar
       </button>
+      <button class="header-btn" onclick="location.href='masterbooking.html'">
+      Master Booking
+    </button>
       <button id="logout-btn" class="header-btn">Logout</button>
     </div>
   </header>
