--- a/fleetmaster.html
+++ b/fleetmaster.html
@@ -83,26 +83,29 @@
 </head>
 <body>
 
-  <header>
-  <div>YFNED Fleetmaster Controls</div>
-  <div>
-    <button class="header-btn" onclick="location.href='fleetmaster.html'">
-      Fleetmaster View
+    <header>
+    <div>YFNED Fleetmaster Controls</div>
+    <div>
+      <button class="header-btn" onclick="location.href='fleetmaster.html'">
+        Fleetmaster View
+      </button>
+      <button class="header-btn" onclick="location.href='mastercalendar.html'">
+        Master Calendar
+      </button>
+      <button class="header-btn" onclick="location.href='availability.html'">
+        Availability Calendar
+      </button>
+      <button class="header-btn" onclick="location.href='masterbooking.html'">
+        Master Booking
+      </button>
+     <button id="export-btn" class="header-btn">
+       Export Logs
     </button>
-    <button class="header-btn" onclick="location.href='mastercalendar.html'">
-      Master Calendar
-    </button>
-    <button class="header-btn" onclick="location.href='availability.html'">
-      Availability Calendar
-    </button>
-    <button class="header-btn" onclick="location.href='masterbooking.html'">
-      Master Booking
-    </button>
-    <button id="logout-btn" class="header-btn">
-      Logout
-    </button>
-  </div>
-</header>
+      <button id="logout-btn" class="header-btn">
+        Logout
+      </button>
+    </div>
+  </header>
 
 
 <div class="container">
