--- a/mastercalendar.html
+++ b/mastercalendar.html
@@ -1,3 +1,7 @@
+
+html
+Copy
+Edit
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -47,8 +51,10 @@
       margin: 0 auto;
       align-items: flex-start;
     }
-    #legend {
-      flex: 0 0 260px;
+
+    /* legend and selected-date panel share the same max height */
+    #legend,
+    #dateInfo {
       background: white;
       padding: 15px;
       border-radius: 10px;
@@ -56,6 +62,10 @@
       max-height: 75vh;
       overflow-y: auto;
     }
+    #legend {
+      flex: 0 0 260px;
+    }
+
     .legend-item {
       display: flex;
       align-items: center;
@@ -68,35 +78,34 @@
       border-radius: 4px;
       margin-right: 8px;
     }
+
     #rightPanel {
       flex: 1;
       display: flex;
       gap: 20px;
       align-items: flex-start;
     }
+
+
     #calendar {
       flex: 2;
       background: white;
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      max-height: 80vh;
-      overflow-y: auto;
+
     }
+
     .fc .fc-daygrid-day-frame {
       max-height: 100px;
       height: 100px;
+      overflow-y: hidden;
+    }
+    .fc .fc-daygrid-day-frame:hover,
+    .fc .fc-daygrid-day-frame:focus-within {
       overflow-y: auto;
     }
-    #dateInfo {
-      flex: 1;
-      background: #fff;
-      padding: 15px;
-      border-radius: 10px;
-      box-shadow: 0 0 8px rgba(0,0,0,0.08);
-      max-height: 75vh;
-      overflow-y: auto;
-    }
+
     .booking-box {
       padding: 10px;
       border-radius: 8px;
