--- a/masterbooking.html
+++ b/masterbooking.html
@@ -169,6 +169,7 @@
           <option value="16-24 2024 Blue Traverse CT073">2024 Blue Traverse CT073</option>
           <option value="17-25 2025 Black Buick Envision CV294">2025 Black Buick Envision CV294</option>
           <option value="18-25 2024 White Ford F750 CVVVVV">2024 White Ford F750 CVVVVV</option>
+          <option value="Test NFC Card" hidden>Test NFC Card</option>
         </select>
       </label>
     </div>
