--- a/mastercalendar.html
+++ b/mastercalendar.html
@@ -178,14 +178,14 @@ Edit
     const legendEl       = document.getElementById("legend");
 
     const vehicleColors = {
-      "01-20 2021 Red Traverse CM335": "#e74c3c",
+      "01-20 2021 Red Traverse CM335": "95a5a6",
       "02-20 2021 Black Traverse CM366": "#2c3e50",
-      "03-21 2021 Grey Traverse CN360": "#95a5a6",
+      "03-21 2021 Grey Traverse CN360 Nutrition Team Only": "#e74c3c",
       "04-21 2021 Shadow Silverado 1500 CM695": "#f1c40f",
       "05-21 2021 Ebony Buick Encore CM532": "#ff6f61",
-      "06-21 2020 Grey Grand Caravan CN468": "#1e90ff",
-      "07-21 2021 White Terrain CN466": "#f39c12",
-      "08-21 2021 Black Terrain CN467": "#d35400",
+      "06-21 2020 Grey Grand Caravan CN468 Early Years Only": "#e7bbd2",
+      "07-21 2021 White Terrain CN466 Early Years Only": "#e7bbd2",
+      "08-21 2021 Black Terrain CN467 Early Years Only": "#e7bbd2",
       "09-24 2024 White Sierra 3500 C182B": "#16a085",
       "10-24 2025 Green Trailblazer C838B": "#27ae60",
       "11-24 2024 Grey Traverse CS266": "#3498db",
@@ -294,3 +294,4 @@ Edit
   </script>
 </body>
 </html>
+
