--- a/mastercalendar.html
+++ b/mastercalendar.html
@@ -178,7 +178,7 @@ Edit
     const legendEl       = document.getElementById("legend");
 
     const vehicleColors = {
-      "01-20 2021 Red Traverse CM335": "95a5a6",
+      "01-20 2021 Red Traverse CM335": "#95a5a6",
       "02-20 2021 Black Traverse CM366": "#2c3e50",
       "03-21 2021 Grey Traverse CN360 Nutrition Team Only": "#e74c3c",
       "04-21 2021 Shadow Silverado 1500 CM695": "#f1c40f",
@@ -294,4 +294,5 @@ Edit
   </script>
 </body>
 </html>
+
 
