--- a/availability.html
+++ b/availability.html
@@ -186,7 +186,7 @@
       "15-24 2024 Grey Traverse C444C": "#8e44ad",
       "16-24 2024 Blue Traverse CT073": "#1abc9c",
       "17-25 2025 Black Buick Envision CV294": "#8e44ad",
-      "18-25 2024 White Ford F750 CVVVVV": "#fd9644"
+      "18-25 2025 Ford Transit VAN - C115C": "#fd9644"
     };
 
     let allBookings = [];
