--- a/calendar.html
+++ b/calendar.html
@@ -69,7 +69,7 @@
           <option value="14-24 2024 Grey Traverse C443C">2024 Grey Traverse C443C</option>
           <option value="15-24 2024 Grey Traverse C444C">2024 Grey Traverse C444C</option>
           <option value="16-24 2024 Blue Traverse CT073">2024 Blue Traverse CT073</option>
-          <option value="18-25 2025 Ford Transit VAN - C115C">2025 Ford Transit VAN - C115C</option>
+          <option value="18-25 2025 Ford Transit Van - C115C">2025 Ford Transit Van - C115C</option>
         </select>
       </label>
     </div>
@@ -366,4 +366,5 @@
 </script>
 </body>
 </html>
+
 
