--- a/mastercalendar.html
+++ b/mastercalendar.html
@@ -195,7 +195,7 @@ Edit
       "15-24 2024 Grey Traverse C444C": "#8e44ad",
       "16-24 2024 Blue Traverse CT073": "#1abc9c",
       "17-25 2025 Black Buick Envision CV294": "#8e44ad",
-      "18-25 2025 Ford Transit VAN - C115C": "#fd9644"
+      "18-25 2025 Ford Transit Van - C115C": "#fd9644"
     };
 
     let allBookings = [];
@@ -294,6 +294,7 @@ Edit
   </script>
 </body>
 </html>
+
 
 
 
