--- a/fleetmaster.html
+++ b/fleetmaster.html
@@ -84,10 +84,10 @@
       cursor: pointer;
       font-weight: bold;
     }
-    .atFrontDesk { background-color: #e0e257; color: black; }
-    .withStaff   { background-color: #2ecc71; color: black; }
-    .signedOut   { background-color: #e7bbd2; color: black; }
-    .available   { background-color: #5cbde5; color: black; }
+    .atFrontDesk { background-color: #e7bbd2; color: black; }
+    .withStaff   { background-color: #e0e257; color: black; }
+    .signedOut   { background-color: #5cbde5; color: black; }
+    .available   { background-color: #2ecc71; color: black; }
     .alarm       { background-color: #d4282f; color: white; }
     .alarm-row   { background-color: #ffdddd !important; }
 
